openshift-pipeline/Trigger/fix-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cm-acme-http-solver-apitigger
  namespace: xp-apibackend
spec:
  rules:
    - host: xpapibackend.trigger.privapps.nttscloud.com
      http:
        paths:
          - path: >-
              /.well-known/acme-challenge/mWYQQYstE-iZctbtWA68t5eCaWweDai_0y0WrK2D724
            pathType: ImplementationSpecific
            backend:
              service:
                name: cm-acme-http-solver-sxrl6
                port:
                  number: 8089
