openshift-pipeline/Trigger/trigger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpapibackend-trigger-ingress
  namespace: xp-apibackend
spec:
  tls:
  - hosts:
    - xpapibackend.trigger.privapps.nttscloud.com
    secretName: xpapibackend-trigger-tls-secret
  rules:
    - host: xpapibackend.trigger.privapps.nttscloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-xpapibackend-app
                port:
                  number: 8080
